--- a/AppQuanLyQuanKaraoke/NewControl/NewControl.csproj
+++ b/AppQuanLyQuanKaraoke/NewControl/NewControl.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonDangNhap.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ButtonStyleHot.cs">
       <SubType>Component</SubType>
     </Compile>
