--- a/AppQuanLyQuanKaraoke/AppQuanLyQuanKaraoke/app.config
+++ b/AppQuanLyQuanKaraoke/AppQuanLyQuanKaraoke/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="AppQuanLyQuanKaraoke.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DAL_QLKaraore.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <AppQuanLyQuanKaraoke.Properties.Settings>
@@ -12,4 +15,11 @@
             </setting>
         </AppQuanLyQuanKaraoke.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <DAL_QLKaraore.Properties.Settings>
+            <setting name="connect_karaoke" serializeAs="String">
+                <value>Data Source=DESKTOP-319D2UA;Initial Catalog=QL_KARAOKE;User ID=sa;Password=sa2012</value>
+            </setting>
+        </DAL_QLKaraore.Properties.Settings>
+    </applicationSettings>
 </configuration>
